Makefile の -lcurses を削除

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,7 @@ $(TARGET): main.o
 	$(CC) $(LDFLAGS) $^ -o $@ -lcurses
 
 %.o : %.c
-	$(CC) $(CFLAGS) -c $< -o $@ -I/usr/include -lcurses
+	$(CC) $(CFLAGS) -c $< -o $@
 
 .PHONY: clean
 clean:
